# small

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: npm-packages.yml  python-package.yml
benchmarks/: ratio.py
delta/: __init__.py
delta/theta/: __init__.py
delta/theta/mcp/: __init__.py  config.py  server.py
docs/: 00-intent.md  01-baseline.md  02-format.md  03-usage.md  04-verification.md  05-improvements.md  06-architecture.md  07-correctness.md  08-training.md  10-output-format.md  12-sequencing.md  ALGORITHMS.md  API.md  ML_INTEGRATION.md  blog-how-small-works.md  mcp.md
examples/: basic.py
scripts/: build-sdk.sh  build-wasm.sh  generate_code_corpus.py
small/: __init__.py  adaptive.py  ast_python.py  bpe_discovery.py  compressor.py  config.py  corpus.py  dictionary.py  dictionary_store.py  discovery.py  discovery_parallel.py  domain.py  embedding_cache.py  embeddings.py  engine.py  fuzzy.py  metrics.py  metrics_writer.py  offline_pipeline.py  pattern_importance.py  preprocess.py  quality_predictor.py  selection.py  selection_ilp.py  static_dict_io.py  static_dicts.py  subsumption.py  suffix_array.py  swap.py  tokenizer.py  training.py  types.py  utils.py  validation.py  vocab.py
small/mcp/: tools.py
tests/: conftest.py  test_compress.py  test_embedding_cache.py  test_static_dict_builder.py
tests/fixtures/: regression.json
tests/fixtures/benchmarks/: security_qa.jsonl
tests/fixtures/corpora/code/: python_delta.jsonl  typescript_small.jsonl
tests/fixtures/corpora/edge_cases/: maximum_repetition.jsonl  minimal_repetition.jsonl
tests/fixtures/corpora/policies/: security_policies.jsonl
