[project]
name = "small"
version = "0.1.0"
description = "Lossless Token Sequence Compression (LTSC) reference implementation"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Triage-Sec" }
]
keywords = ["ltsi", "compression", "tokens", "ltc", "llm"]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.pytest.ini_options]
addopts = "-q"
