[project]
name = "small"
version = "0.1.0"
description = "Lossless Token Sequence Compression (LTSC) reference implementation"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Triage-Sec" }
]
keywords = ["ltsi", "compression", "tokens", "ltc", "llm"]

[project.dependencies]
numpy = ">=1.24.0"
tiktoken = ">=0.5.0"
pyyaml = ">=6.0"
click = ">=8.0"
tqdm = ">=4.65"

[project.optional-dependencies]
tokenizers = [
  "transformers>=4.35.0",
  "sentencepiece>=0.1.99",
]
embeddings = [
  "sentence-transformers>=2.2.0",
  "torch>=2.0.0",
  "openai>=1.0.0",
  "httpx>=0.25.0",
  "voyageai>=0.1.4",
  "cohere>=4.30",
  "zstandard>=0.22.0",
  "redis>=5.0.0",
]
analysis = [
  "small[embeddings]",
  "scikit-learn>=1.3.0",
  "scipy>=1.11.0",
  "matplotlib>=3.7.0",
  "pandas>=2.0.0",
]
training = [
  "small[tokenizers]",
  "datasets>=2.14.0",
  "accelerate>=0.24.0",
  "peft>=0.6.0",
  "wandb>=0.15.0",
]
dev = [
  "small[analysis,training]",
  "pytest>=7.4",
  "pytest-cov>=4.1.0",
  "pytest-benchmark>=4.0.0",
  "hypothesis>=6.88.0",
  "mypy>=1.6.0",
  "ruff>=0.1.0",
  "pre-commit>=3.5.0",
]
all = ["small[tokenizers,embeddings,analysis,training]"]

[tool.pytest.ini_options]
addopts = "-q"
